--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         Message: <input type="text" name="text" placeholder="The message..." />
         <br />
       </p>
-      <button type="submit">
+      <button id="submit-form" type="submit">
         Send
       </button>
     </form>
 
     <a href="/messages">See all messages</a>
+    <div id="see-messages"></div>
+    <script src="/index.js"></script>
   </body>
 </html>
